# mecano

./: .gitignore  100_spanish  Cargo.toml  README.md  bugs.md  config.toml  example.txt  mecano.toml  todo.md
config/: mecano.conf  mecano.toml
dictionaries/: 100_italian  100_portuguese  100_spanish  300_english  300_spanish
mecano/: Cargo.toml  README.md  build.rs  mecano.toml
mecano-macros/: Cargo.toml  errors
mecano-macros/src/: lib.rs
mecano/resources/dictionaries/: 100_english
mecano/src/: engine.rs  lib.rs  main.rs  punctuation.rs
mecano/src/cli/: file_health.rs  flags.rs  mod.rs  options.rs  response_text.rs
mecano/src/config/: fields.rs  mod.rs
mecano/src/engine/: mod.rs
mecano/src/frames/: clock_frame.rs  input_frame.rs  mod.rs  title_frame.rs
mecano/src/frames/textbox/: mod.rs
mecano/src/mode/: dictionary.rs  file.rs  mod.rs
mecano/src/textbox/: mod.rs  word.rs
scripts/: arch_pkg.sh  bench_profiles.sh  version
src/: dictionary.rs  help.rs  main.rs  mecano.rs  state.rs  term_buf.rs
src/config/: mod.rs
src/mecano/: buffer.rs  drawing.rs  line.rs  mod.rs  state.rs  word.rs
src/modes/: dictionary.rs  file.rs  mod.rs
src/state/: drawing.rs  line.rs  mod.rs
