[package]
name = "mecano"
version = "0.1.2"
edition = "2021"
authors = [ "alvarojsino813" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["serde"] }
toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }
rand = "0.8.0"
