[workspace]
members = ["mecano", "mecano-*"]
resolver = "2"

[profile.release]
opt-level = "z"
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto-no-opt]
inherits = "release"
opt-level = 0
lto = true

[profile.release-lto-opt-1]
inherits = "release"
opt-level = 1
lto = true

[profile.release-lto-opt-2]
inherits = "release"
opt-level = 2
lto = true

[profile.release-lto-opt-3]
inherits = "release"
opt-level = 3
lto = true

[profile.release-lto-opt-s]
inherits = "release"
opt-level = "s"
lto = true

[profile.release-lto-opt-z]
inherits = "release"
opt-level = "z"
lto = true

[profile.release-no-lto-no-opt]
inherits = "release"
opt-level = 0
lto = false

[profile.release-no-lto-opt-1]
inherits = "release"
opt-level = 1
lto = false

[profile.release-no-lto-opt-2]
inherits = "release"
opt-level = 2
lto = false

[profile.release-no-lto-opt-3]
inherits = "release"
opt-level = 3
lto = false

[profile.release-no-lto-opt-s]
inherits = "release"
opt-level = "s"
lto = false

[profile.release-no-lto-opt-z]
inherits = "release"
opt-level = "z"
lto = false
