[package]
name = "mecano"
version = "0.2.1"
edition = "2021"
authors = [ "alvarojsino813" ]
license = "unlicensed"
description = "A minimalist typing test"
repository = "https://github.com/alvarojsino813/mecano"
readme = "README.md"
keywords = ["game", "typing", "minimalist", "tui"]
cathegories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
dirs = { version = "5.0.1" }
rand = "0.8.0"
constcat = { version = "0.5.0" }

[build-dependencies]
dirs = { version = "5.0.1" }
